<resources>
    <string name="app_name">ClubHub</string>
    <string name="clubFinderStr">Club Finder</string>
    <string name="schoolTextStr">Pick your school</string>
    <string name="yourClubsButtonStr">Your Clubs</string>
    <string name="createClubButtonStr">Create a new club</string>
    <string name="addClubButtonStr">Add an existing club</string>
    <string name="findClubButtonStr">Find Clubs</string>
    <string name="nameYourNewClub">Name your new club:</string>
    <string name="name">Name</string>
    <string name="describeClub">Describe your club:</string>
    <string name="when">"When does your club meet? "</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="weds">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="leader">Student Leader</string>
    <string name="president">President</string>
    <string name="vicePres">Vice President</string>
    <string name="treasurer">Treasurer</string>
    <string name="Secretary">Secretary</string>
    <string name="select">Select your role: </string>
    <string name="createAccountTitleStr">Create your Account: </string>
    <string name="usernameHint">Username: </string>
    <string name="dontSeeSchoolText">Don\'t see your school?</string>


    <string name="selectRole">"Select your role: "</string>
    <string name="post">"Post Club: "</string>
    <string name="title_activity_your_clubs_member">YourClubsMember</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="yourClubs">Your Clubs</string>
    <string name="member">Member</string>
    <string name="leaderButton">Leader</string>
    <string name="one">club1</string>
    <string name="club2">club 2</string>
    <string name="club3">club 3</string>
    <string name="youareLeader">You are a CLUB LEADER.</string>
    <string name="youAre">"You are "</string>
    <string name="clubLeader1">CLUB LEADER</string>
    <string name="clubLeader2">CLUB LEADER</string>
    <string name="clubLeader3">"CLUB LEADER "</string>
    <string name="otherInfo">Other Information</string>
    <string name="teacherSelect">"Select a club to view: "</string>
    <string name="leave">Leave Club</string>
    <string name="clubName">Club Name</string>
    <string name="leaders">Student Leaders:</string>
    <string name="describe">Description:</string>
    <string name="meetings">"Meeting Dates and Times: "</string>
    <string name="students">Members:</string>
    <string name="title_activity_edit_club_info">EditClubInfoActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="advisenew">Advise A New Club</string>
    <string name="chooseclubinfo">Choose a club to see more information about it:</string>
    <string name="getmoreinfo">Get more information</string>
    <string name="chstudent">ClubHub Student</string>
    <string name="signout">Sign Out</string>
    <string name="chteacher">ClubHub Teacher</string>
    <string name="enterschoolname">Enter School Name:</string>
    <string name="createschool">Create a School</string>
    <string name="back">BACK</string>
    <string name="create">CREATE</string>
    <string name="editclubinfo">Edit Club Information</string>
    <string name="login">Login</string>
    <string name="emailhint">Email:</string>
    <string name="passwordhint">Password:</string>
    <string name="welcometoch">Welcome to ClubHub:</string>
    <string name="signup">Sign up</string>
    <string name="tempname">Temp Name</string>
    <string name="studentleaders">Student Leaders:</string>
    <string name="teacheradv">Teacher Advisor:</string>
    <string name="descr">Description:</string>
    <string name="meetingdays">Meeting Days and Times:</string>
    <string name="members">Members:</string>
    <string name="memberclubs">Your member Clubs</string>
    <string name="memb">member</string>
    <string name="backmain">Back to main</string>
    <string name="lead">leader</string>





    <string name="i_am_a_student">I am a student</string>
    <string name="i_am_a_teacher">I am a teacher</string>
    <string name="description">Description:</string>
    <string name="select_the_starting_time">Select the starting time</string>
    <string name="select_the_ending_time">Select the ending time</string>
    <string name="create_a_club">Create a Club</string>
    <string name="delete_club">Delete club</string>
    <string name="club_description">Club Description</string>
    <string name="meeting_days">Meeting Days</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="save_info">Save Info</string>
    <string name="manage_members">Manage Members</string>
    <string name="leader_options">Leader Options</string>
    <string name="click_on_the_club_name_to_view_information">Click on the club name to view information</string>
    <string name="revert_to_member">Revert to member</string>
    <string name="manage_club_members">Manage Club Members</string>
    <string name="make_leader">Make leader</string>
    <string name="remove_member">Remove member</string>
    <string name="adviser_options">Adviser Options</string>
    <string name="manage_leaders">Manage Leaders</string>
    <string name="your_options">Your Options</string>
    <string name="leave_club">Leave Club</string>


</resources>