<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B4DBF6F0"
    tools:context=".YourClubsStudent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="600dp"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/app_name"
        android:textColor="#4A4E69"
        android:textSize="43sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/yourClubs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/memberclubs"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.024" />

    <Button
        android:id="@string/member"
        android:layout_width="114dp"
        android:layout_height="61dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="482dp"
        android:background="#C4D7F2"
        android:fontFamily="casual"
        android:onClick="memberOnClick"
        android:text="@string/member"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@string/lead"
        android:layout_width="123dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="482dp"
        android:background="#C4D7F2"
        android:fontFamily="casual"
        android:onClick="leaderOnClick"
        android:text="@string/leaderButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/memberBackButton"
        android:layout_width="109dp"
        android:layout_height="56dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="162dp"
        android:background="#C4D7F2"
        android:fontFamily="casual"
        android:onClick="backOnClick"
        android:text="@string/backmain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourClubView" />

    <ListView
        android:id="@+id/yourClubView"
        android:layout_width="363dp"
        android:layout_height="322dp"
        android:layout_marginTop="148dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourClubs" />

</androidx.constraintlayout.widget.ConstraintLayout>