<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B4DBF6F0">

    <ScrollView
        android:layout_width="598dp"
        android:layout_height="800dp"
        android:layout_marginTop="50dp"
        android:foregroundGravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startClubTitle">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical">


            <TextView
                android:id="@+id/nameYourNewClub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/nameYourNewClub"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/startClubName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Name:"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/describeYourClub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/describeClub"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/fillClubDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="Description:"
                android:inputType="textMultiLine"
                android:textAlignment="center"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/whenDoYouMeet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/when"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/dayz"
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/monday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/monday" />

                <CheckBox
                    android:id="@+id/tuesday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesday" />

                <CheckBox
                    android:id="@+id/wednesday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weds" />

                <CheckBox
                    android:id="@+id/thursday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thursday" />

                <CheckBox
                    android:id="@+id/friday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fri" />

                <CheckBox
                    android:id="@+id/saturday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sat" />

                <CheckBox
                    android:id="@+id/sunday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sun" />

            </LinearLayout>

            <!--

        <TextView
            android:id="@+id/selectRole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="24sp" />


        <RadioGroup
            android:id="@+id/roles"
            android:layout_width="match_parent"
            android:layout_height="150dp" >

            <RadioButton
                android:id="@+id/studentLeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leader" />

            <RadioButton
                android:id="@+id/President"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/president" />

            <RadioButton
                android:id="@+id/vicePres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vicePres" />

            <RadioButton
                android:id="@+id/treasurer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/treasurer" />

            <RadioButton
                android:id="@+id/secretary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Secretary" />
        </RadioGroup> -->

            <TextView
                android:id="@+id/startTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="Select the starting time"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/timeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/endingTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:text="Select the ending time"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/endingTimeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="createClubOnClick"
                android:paddingTop="10dp"
                android:text="@string/post" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/startClubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/comfortaa_light"
        android:text="Create a Club"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>