<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YourClubLeader">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="600dp"
        android:text="@string/app_name"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yourClubs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="700dp"
        android:text="@string/yourClubs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="482dp"
        android:text="@string/member"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/leader"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/leader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="482dp"
        android:text="@string/leaderButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/member"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="321dp"
        android:layout_height="114dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/member"
        app:srcCompat="?attr/selectableItemBackgroundBorderless" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="321dp"
        android:layout_height="114dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
        app:srcCompat="?attr/selectableItemBackgroundBorderless" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="321dp"
        android:layout_height="114dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:srcCompat="?attr/selectableItemBackgroundBorderless" />

    <TextView
        android:id="@+id/club1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginBottom="120dp"
        android:text="@string/one"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/club2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/youAre2"
        android:layout_width="70sp"
        android:layout_height="30sp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="60dp"
        android:text="@string/youAre"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintEnd_toStartOf="@+id/leader2" />

    <TextView
        android:id="@+id/youAre1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="7dp"
        android:text="@string/youAre"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/leader1"
        app:layout_constraintTop_toBottomOf="@+id/yourClubs" />

    <TextView
        android:id="@+id/club2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="18dp"
        android:text="@string/club2"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/youAre2"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/club3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="23dp"
        android:text="@string/club3"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

    <TextView
        android:id="@+id/youAre3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="32dp"
        android:text="@string/youAre"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/leader3" />

    <TextView
        android:id="@+id/leader1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="18dp"
        android:text="@string/clubLeader1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/leader"
        app:layout_constraintTop_toBottomOf="@+id/member" />

    <TextView
        android:id="@+id/leader2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="211dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="122dp"
        android:text="@string/clubLeader2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

    <TextView
        android:id="@+id/leader3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="125dp"
        android:text="@string/clubLeader3"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

</androidx.constraintlayout.widget.ConstraintLayout>